# optimtensors

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  huggingface_discussion_template.md  pyproject.toml  pytorch_ecosystem_application_template.md  requirements.txt  test_results.md
.github/workflows/: ci.yml  publish.yml  tests.yml
src/optimtensors/: __init__.py  dcp.py  distributed.py  integrations.py  serde.py  type_check.py
tests/: benchmark.py  benchmark_dcp.py  conftest.py  run_in_loop_benchmarks.py  run_insane_stress_tests.py  run_scale_tests.py  run_unsloth_integration.py  test_accelerate_compat.py  test_amp.py  test_architectures.py  test_concurrency.py  test_dcp.py  test_dcp_architectures.py  test_fsdp_cpu.py  test_fuzz.py  test_hypothesis.py  test_hypothesis_general_state.py  test_leaks.py  test_serde.py  test_transformers.py  test_type_check.py
tests/fixtures/: v1_optimizer.optimtensors
