[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimtensors"
version = "1.0.0"
description = "A safe, zero-code-execution serialization format for PyTorch optimizer states"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=1.10.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
