[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimtensors"
version = "1.0.0"
description = "A safe, zero-code-execution serialization format for PyTorch optimizer states"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
transformers = [
    "transformers>=4.30.0",
    "peft>=0.5.0",
    "trl>=0.8.0",
    "datasets>=2.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]
